feat: add endpoint to accept and return string

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
+    "@cloudflare/workers-types": "^4.20230904.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@micro-stacks/react": "^1.0.9",
