--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "swagger-ui-react": "^5.7.1",
     "typescript": "^5.2.2",
     "web-vitals": "^3.4.0"
   },
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/swagger-ui-react": "^4.18.0"
   }
 }
