--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/swagger-ui-react": "^4.18.0"
+    "@types/swagger-ui-react": "^4.18.0",
+    "wrangler": "^3.8.0"
   }
 }
