--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "Bitcoin Faces",
+  "description": "Every name has a bitcoin face. Get yours first.",
   "icons": [
     {
       "src": "/android-icon-36x36.png",
